improve card interface and search function